<resources>
    <string name="app_name">GPSTracker</string>
    <string name="home">Home</string>
    <string name="tracks">Tracks</string>
    <string name="settings">Settings</string>
    <string name="update_time">Update time</string>
    <string name="update_time_summary">Location update time</string>
    <string name="location">Location</string>
    <string name="track_color">Track color</string>
    <string name="choose_track_color">Choose track color</string>
    <string name="location_disabled">Location disabled</string>
    <string name="dialog_message">Do you want enable GPS?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="tracker_running">Tracker running...</string>
</resources>